5_cert_manager/egress-rule-letsencrypt-apis.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: letsencrypt
  namespace: istio-system
spec:
  hosts:
    - api.letsencrypt.org
  ports:
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
